k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: asientos
  labels:
    app: frontend
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: http
      nodePort: 30080
      name: http
  selector:
    app: frontend
