k8s/mysql-service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: asientos
  labels:
    app: mysql
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
    - port: 3306
      name: mysql
      targetPort: 3306
  selector:
    app: mysql
